# gdip

gdip/core/: CMakeLists.txt
gdip/core/src/opendubins/: arc.cpp  dubins.cpp  dubins3D.cpp  dubins3D.h  dubinsmaneuver3D.cpp  dubinspath.cpp  line.cpp  state3D.cpp  vector3D.h
gdip/examples/: CMakeLists.txt
gdip/examples/src/: hellodubins3D.cpp
gdip/include/opendubins/: arc.h  dtype.h  dubins.h  dubinspath.h  line.h  path.h  point3d.h  state3D.h  stateatdistance.h
gdip/wrappers/: CMakeLists.txt
